force-app/main/default/objects/DualEmploymentSurvey__c/fields/Owned_Or_Controled_An_Organization__c.field-meta.xml
<CustomField>
    <fullName>Owned_Or_Controled_An_Organization__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Owned Or Controled An Organization</label>
    <type>Picklist</type>
</CustomField>