force-app/main/default/objects/DualEmploymentSurvey__c/fields/Owner_Was_You_Or_Family__c.field-meta.xml
<CustomField>
    <fullName>Owner_Was_You_Or_Family__c</fullName>
    <label>Owner Was You Or Family</label>
    <picklist>
        <picklistValues>
            <fullName>You</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Family Member</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>