force-app/main/default/objects/DualEmploymentSurvey__c/fields/Participated_In_Academic_Activities__c.field-meta.xml
<CustomField>
    <fullName>Participated_In_Academic_Activities__c</fullName>
    <label>Participated In Academic Activities</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>