force-app/main/default/objects/DualEmploymentSurvey__c/fields/Participated_In_The_Procurement_Process__c.field-meta.xml
<CustomField>
    <fullName>Participated_In_The_Procurement_Process__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Participated In The Procurement Process</label>
    <type>Picklist</type>
</CustomField>