force-app/main/default/objects/DualEmploymentSurvey__c/fields/Position_Within_Organization__c.field-meta.xml
<CustomField>
    <fullName>Position_Within_Organization__c</fullName>
    <label>Position Within Organization</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>