force-app/main/default/objects/DualEmploymentSurvey__c/fields/Received_Compensation_From_Activities__c.field-meta.xml
<CustomField>
    <fullName>Received_Compensation_From_Activities__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Received Compensation From Activities</label>
    <type>Picklist</type>
</CustomField>