force-app/main/default/objects/DualEmploymentSurvey__c/fields/Received_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Received_Gifts__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Received Gifts</label>
    <type>Picklist</type>
</CustomField>