force-app/main/default/objects/DualEmploymentSurvey__c/fields/Received_Gifts_From__c.field-meta.xml
<CustomField>
    <fullName>Received_Gifts_From__c</fullName>
    <label>Received Gifts From</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>