force-app/main/default/objects/DualEmploymentSurvey__c/fields/Research_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Title__c</fullName>
    <label>Research Project Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>