force-app/main/default/objects/DualEmploymentSurvey__c/fields/Research_Role__c.field-meta.xml
<CustomField>
    <fullName>Research_Role__c</fullName>
    <label>Research Role</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>