force-app/main/default/objects/DualEmploymentSurvey__c/fields/Research_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Research_Sponsor_Name__c</fullName>
    <label>Research Sponsor Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>