force-app/main/default/objects/DualEmploymentSurvey__c/fields/Responsibility_Position__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Position__c</fullName>
    <label>Responsibility Position</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>