force-app/main/default/objects/DualEmploymentSurvey__c/fields/Responsibility_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Relationship__c</fullName>
    <label>Responsibility Relationship</label>
    <picklist>
        <picklistValues>
            <fullName>You</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Family Member</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>