force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer__c</fullName>
    <label>Second Outside Employer</label>
    <type>TextArea</type>
</CustomField>