force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_Brief_Job__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_Brief_Job__c</fullName>
    <label>Second Outside Employer Brief Job</label>
    <type>TextArea</type>
</CustomField>