force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_City__c</fullName>
    <label>Second Outside Employer City</label>
    <type>TextArea</type>
</CustomField>