force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_Hire_Date__c</fullName>
    <label>Second Outside Employer Hire Date</label>
    <type>Date</type>
</CustomField>