force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_Job_Title__c</fullName>
    <label>Second Outside Employer Job Title</label>
    <type>TextArea</type>
</CustomField>