force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_State__c</fullName>
    <label>Second Outside Employer State</label>
    <picklist>
        <picklistValues>
            <fullName>Illinois</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Indiana</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Wisconsin</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Alabama</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Alaska</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Arizona</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Arkansas</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>California</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Colorado</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Connecticut</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Delaware</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Florida</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Georgia</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hawaii</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Idaho</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Iowa</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Kansas</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Kentucky</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Louisiana</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Maine</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Maryland</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Massachusetts</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Michigan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Minnesota</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Mississippi</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Missouri</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Montana</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Nebraska</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Nevada</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>New Hampshire</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>