force-app/main/default/objects/DualEmploymentSurvey__c/fields/Second_Outside_Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Second_Outside_Employer_Zip_Code__c</fullName>
    <label>Second Outside Employer Zip Code</label>
    <type>TextArea</type>
</CustomField>