force-app/main/default/objects/DualEmploymentSurvey__c/fields/Served_In_A_Position_Of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Served_In_A_Position_Of_Responsibility__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Served In A Position Of Responsibility</label>
    <type>Picklist</type>
</CustomField>