force-app/main/default/objects/DualEmploymentSurvey__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <formula>Owner:User.Supervisor_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Name</label>
    <type>Text</type>
</CustomField>