force-app/main/default/objects/DualEmploymentSurvey__c/fields/SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>SupervisorId__c</fullName>
    <formula>Owner:User.Supervisor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SupervisorId</label>
    <type>Text</type>
</CustomField>