force-app/main/default/objects/DualEmploymentSurvey__c/fields/SupervisorsSupervisorId__c.field-meta.xml
<CustomField>
    <fullName>SupervisorsSupervisorId__c</fullName>
    <formula>Owner:User.Supervisor__r.Supervisor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisors Supervisor Id</label>
    <type>Text</type>
</CustomField>