force-app/main/default/objects/DualEmploymentSurvey__c/fields/Survey_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Survey_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dual_Employment_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>