force-app/main/default/objects/DualEmploymentSurvey__c/fields/Survey_Final_Approval_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Survey_Final_Approval_Time_Stamp__c</fullName>
    <label>Survey Final Approval Time Stamp</label>
    <type>DateTime</type>
</CustomField>