force-app/main/default/objects/DualEmploymentSurvey__c/fields/Survey_Owner_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>Survey_Owner_EmployeeID__c</fullName>
    <formula>Owner:User.EmployeeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Owner EmployeeID</label>
    <type>Text</type>
</CustomField>