force-app/main/default/objects/DualEmploymentSurvey__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <description>0   No survey is taken yet. No data for a survey exists
1   Survey is started but not submitted
2   Survey Complete - Pending Level 1 Approval
3   Survey Complete - Pending Level 2 Approval
4   Survey Auto Approved
5   Survey Approved By Manager
6   Rejected</description>
    <label>Survey Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>