force-app/main/default/objects/DualEmploymentSurvey__c/fields/Survey_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status_Description__c</fullName>
    <formula>CASE(Survey_Status__c, 
0, &quot;In Progress&quot;, 
1, &quot;Started&quot;,
2, &quot;Pending Level 1 Approval&quot;,
3, &quot;Pending Level 2 Approval&quot;,
4, &quot;Auto Approved&quot;,
5, &quot;Approved By Manager&quot;,
6, &quot;Rejected&quot;,
&quot;Not Started&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Status</label>
    <type>Text</type>
</CustomField>