force-app/main/default/objects/DualEmploymentSurvey__c/fields/Third_Outside_Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Third_Outside_Employer_Address__c</fullName>
    <label>Third_Outside_Employer_Address</label>
    <type>TextArea</type>
</CustomField>