force-app/main/default/objects/DualEmploymentSurvey__c/fields/Third_Outside_Employer_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Outside_Employer_Hire_Date__c</fullName>
    <label>Third_Outside_Employer_Hire_Date</label>
    <type>Date</type>
</CustomField>