force-app/main/default/objects/DualEmploymentSurvey__c/fields/Third_Outside_Employer_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Third_Outside_Employer_Job_Title__c</fullName>
    <label>Third_Outside_Employer_Job_Title</label>
    <type>TextArea</type>
</CustomField>