force-app/main/default/objects/DualEmploymentSurvey__c/fields/Third_Outside_Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Third_Outside_Employer_State__c</fullName>
    <globalPicklist>States</globalPicklist>
    <label>Third_Outside_Employer_State</label>
    <type>Picklist</type>
</CustomField>