force-app/main/default/objects/DualEmploymentSurvey__c/fields/Under_Current_Research_Conflict_Mgt_Plan__c.field-meta.xml
<CustomField>
    <fullName>Under_Current_Research_Conflict_Mgt_Plan__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Under Current Research Conflict Mgt Plan</label>
    <type>Picklist</type>
</CustomField>