force-app/main/default/objects/DualEmploymentSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Is_A_Dual_Employee__c</columns>
    <columns>Survey_Status_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Comliance_Team</role>
        <role>Compliance_Team_Administrator</role>
    </sharedTo>
</ListView>