force-app/main/default/objects/DualEmploymentSurvey__c/listViews/Ready_For_Approval.listView-meta.xml
<ListView>
    <fullName>Ready_For_Approval</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Survey_Status_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ready For Approval</label>
</ListView>