force-app/main/default/objects/DualEmploymentSurvey__c/listViews/Team_Dual_Employent_Surveys.listView-meta.xml
<ListView>
    <fullName>Team_Dual_Employent_Surveys</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Is_A_Dual_Employee__c</columns>
    <columns>Survey_Status_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Owners_Supervisor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>isOwner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Team Dual Employment Surveys</label>
</ListView>